--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,30 @@
-apply plugin: 'application'
+buildscript {
+	ext {
+		springBootVersion = '1.5.7.RELEASE'
+	}
+	repositories {
+		mavenCentral()
+	}
+	dependencies {
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+	}
+}
 
-sourceSets.main.java.srcDirs = ['src']
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'org.springframework.boot'
 
-mainClassName = 'com.onlinephotosubmission.csv_importer.Main'
+group = 'com.sharptop.cloudcard'
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = 1.8
+
+repositories {
+	mavenCentral()
+}
+
+
+dependencies {
+	compile('org.springframework.boot:spring-boot-starter')
+   compile('org.hibernate:hibernate-validator')
+	testCompile('org.springframework.boot:spring-boot-starter-test')
+}
